Migrated/deployment/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: credittransfer-gateway
  namespace: credittransfer
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: credittransfer-vs
  namespace: credittransfer
spec:
  hosts:
  - "*"
  gateways:
  - credittransfer-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: credittransfer-api
        port:
          number: 80
  - match:
    - uri:
        prefix: /wcf
    route:
    - destination:
        host: credittransfer-wcf
        port:
          number: 80
